# mailtidy

./: README.md  pyproject.toml
src/mailtidy/: __main__.py  mailtidy.py
tests/: conftest.py  test_connection_data.py  test_mailbox_manager.py  test_mbox_export.py  test_sender_summary.py  test_summarise_command.py
tests/fixtures/: test_sample_mail_func.py
