[project]
name = "mailtidy"
version = "0.1.0"
description = "MailTidy enables the cleanup of an IMAP mail account by deleteting the accumulated dross while retaining relevant mails."
authors = [
    {name = "Steve Brewin", email = "sbrewin@synsys.com"}
]
repository = "https://github.com/sbrewin/mailtidy.git"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imap-tools (>=1.11, <2.0)",
    "tqdm (>=4.67, <5.0)",
    "PyYAML (>=6.0.3, <7.0)"
]

[dependency-groups]
test = [
    "pytest (>=9.0.2,<10.0)",
    "pytest-mock (>=3.15.1,<4.0)",
]

[tool.poetry]
license = "Apache-2.0"
packages = [{include = "mailtidy", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
